--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -86,6 +86,12 @@
       <property name="value">
        <number>0</number>
       </property>
+      <property name="textVisible">
+       <bool>true</bool>
+      </property>
+      <property name="format">
+       <string>%p%</string>
+      </property>
      </widget>
     </item>
     <item row="1" column="1">
